--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
 <artifactId>SpringFoodPro</artifactId>
 <version>0.0.1-SNAPSHOT</version>
 <name>SpringFoodPro</name>
+	<packaging>war</packaging>
+	
 <description>Spring Boot</description>
 <properties>
 <java.version>11</java.version>
